[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"

sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }